trab/3/parser.output
Terminais sem uso na gramática

    IMPORT
    ASSERT
    TRY
    EXCEPT
    FINALLY
    RAISE
    EXEC
    LBRACE
    RBRACE


Gramática

    0 $accept: file_input $end

    1 file_input: fk_NEWLINE_stmt ENDMARKER

    2 fk_NEWLINE_stmt: %empty
    3                | NL_stmt fk_NEWLINE_stmt

    4 NL_stmt: NEWLINE
    5        | stmt

    6 stmt: simple_stmt
    7     | compound_stmt

    8 simple_stmt: small_stmt fk_SEMI_small_stmt opc_SEMI NEWLINE

    9 fk_SEMI_small_stmt: %empty
   10                   | SEMI small_stmt fk_NEWLINE_stmt

   11 small_stmt: expr_stmt
   12           | del_stmt
   13           | pass_stmt
   14           | flow_stmt
   15           | global_stmt
   16           | nonlocal_stmt

   17 compound_stmt: if_stmt
   18              | while_stmt
   19              | for_stmt
   20              | with_stmt
   21              | funcdef
   22              | classdef

   23 $@1: %empty

   24 funcdef: DEF NAME $@1 parameters opc_RARROW_test COLON func_body_suite

   25 opc_RARROW_test: %empty

   26 $@2: %empty

   27 opc_RARROW_test: RARROW $@2 test

   28 parameters: LPAR opc_argslist RPAR

   29 opc_argslist: %empty

   30 $@3: %empty

   31 opc_argslist: NAME $@3 COMMA opc_argslist
   32             | NAME

   33 expr_stmt: testlist_star_expr expr_stmt_1

   34 expr_stmt_1: annassign
   35            | augassign expr_stmt_2
   36            | fk_EQ_YE_TSE

   37 expr_stmt_2: yield_expr
   38            | testlist

   39 fk_EQ_YE_TSE: %empty
   40             | expr_stmt_3 fk_EQ_YE_TSE

   41 expr_stmt_3: EQUAL expr_stmt_4

   42 expr_stmt_4: yield_expr
   43            | testlist_star_expr

   44 annassign: COLON test opc_EQUAL_MALUCO

   45 opc_EQUAL_MALUCO: %empty
   46                 | EQUAL yield_expr
   47                 | EQUAL testlist_star_expr

   48 testlist_star_expr: TSE_stmt fk_COMMA_T_SE opc_COMMA

   49 TSE_stmt: test
   50         | star_expr

   51 fk_COMMA_T_SE: %empty
   52              | COMMA TSE_stmt fk_COMMA_T_SE

   53 augassign: PLUSEQUAL
   54          | MINEQUAL
   55          | STAREQUAL
   56          | ATEQUAL
   57          | SLASHEQUAL
   58          | PERCENTEQUAL
   59          | AMPEREQUAL
   60          | VBAREQUAL
   61          | CIRCUMFLEXEQUAL
   62          | LEFTSHIFTEQUAL
   63          | RIGHTSHIFTEQUAL
   64          | DOUBLESTAREQUAL
   65          | DOUBLESLASHEQUAL

   66 opc_SEMI: %empty
   67         | SEMI

   68 opc_COMMA: %empty
   69          | COMMA

   70 del_stmt: DEL exprlist

   71 flow_stmt: break_stmt
   72          | continue_stmt
   73          | return_stmt
   74          | yield_stmt

   75 pass_stmt: PASS

   76 break_stmt: BREAK

   77 continue_stmt: CONTINUE

   78 return_stmt: RETURN opc_testlist_star_expr

   79 yield_stmt: yield_expr

   80 opc_testlist_star_expr: %empty
   81                       | testlist_star_expr

   82 $@4: %empty

   83 global_stmt: GLOBAL NAME $@4 fk_COMMA_NAME

   84 $@5: %empty

   85 nonlocal_stmt: NONLOCAL NAME $@5 fk_COMMA_NAME

   86 fk_COMMA_NAME: %empty

   87 $@6: %empty

   88 fk_COMMA_NAME: COMMA NAME $@6 fk_COMMA_NAME

   89 $@7: %empty

   90 if_stmt: IF $@7 namedexpr_test COLON suite fk_ELIF_NT_COLON_SUITE opc_ELSE_COLON_suite

   91 fk_ELIF_NT_COLON_SUITE: %empty

   92 $@8: %empty

   93 fk_ELIF_NT_COLON_SUITE: ELSE_IF $@8 namedexpr_test COLON suite fk_ELIF_NT_COLON_SUITE

   94 while_stmt: WHILE namedexpr_test COLON suite opc_ELSE_COLON_suite

   95 for_stmt: FOR exprlist IN testlist COLON suite opc_ELSE_COLON_suite

   96 opc_ELSE_COLON_suite: %empty

   97 $@9: %empty

   98 opc_ELSE_COLON_suite: ELSE $@9 COLON suite

   99 with_stmt: WITH with_item fk_COMMA_WI COLON suite

  100 fk_COMMA_WI: %empty
  101            | COMMA with_item fk_COMMA_WI

  102 with_item: test opc_AS_expr

  103 opc_AS_expr: %empty
  104            | AS expr

  105 suite: simple_stmt
  106      | NEWLINE INDENT stmt fk_stmt DEDENT

  107 namedexpr_test: test opc_COLONEQUAL_test

  108 opc_COLONEQUAL_test: %empty

  109 $@10: %empty

  110 opc_COLONEQUAL_test: COLONEQUAL $@10 test

  111 test: or_test opc_IF_or_test_ELSE_test
  112     | lambdef

  113 opc_IF_or_test_ELSE_test: %empty
  114                         | IF or_test ELSE test

  115 test_nocond: or_test
  116            | lambdef_nocond

  117 lambdef: LAMBDA opc_argslist COLON test

  118 lambdef_nocond: LAMBDA opc_argslist COLON test_nocond

  119 or_test: and_test fk_OR_AT

  120 fk_OR_AT: %empty
  121         | OR and_test fk_OR_AT

  122 and_test: not_test fk_AND_NT

  123 fk_AND_NT: %empty
  124          | AND not_test fk_AND_NT

  125 not_test: NOT not_test
  126         | comparison

  127 comparison: expr fk_CO_EXPR

  128 fk_CO_EXPR: %empty
  129           | comp_op expr fk_CO_EXPR

  130 comp_op: LESS
  131        | GREATER
  132        | EQEQUAL
  133        | GREATEREQUAL
  134        | LESSEQUAL
  135        | LESSGREATER
  136        | NOTEQUAL
  137        | IN
  138        | NOT IN
  139        | IS
  140        | IS NOT

  141 star_expr: STAR expr

  142 expr: xor_expr fk_VBAR_XE

  143 fk_VBAR_XE: %empty
  144           | VBAR xor_expr fk_VBAR_XE

  145 xor_expr: and_expr fk_CIRCUMFLEX_EXPR

  146 fk_CIRCUMFLEX_EXPR: %empty

  147 $@11: %empty

  148 fk_CIRCUMFLEX_EXPR: CIRCUMFLEX $@11 and_expr fk_CIRCUMFLEX_EXPR

  149 and_expr: shift_expr fk_AMPER_SE

  150 fk_AMPER_SE: %empty

  151 $@12: %empty

  152 fk_AMPER_SE: AMPER $@12 shift_expr fk_AMPER_SE

  153 shift_expr: arith_expr fk_LS_RS_AE

  154 fk_LS_RS_AE: %empty
  155            | SE_stmt arith_expr fk_LS_RS_AE

  156 SE_stmt: LEFTSHIFT
  157        | RIGHTSHIFT

  158 arith_expr: term fk_T_PLUS_MINUS

  159 fk_T_PLUS_MINUS: %empty
  160                | AE_stmt term fk_T_PLUS_MINUS

  161 AE_stmt: PLUS
  162        | MINUS

  163 term: factor fk_MATH

  164 fk_MATH: %empty
  165        | term_stmt factor fk_MATH

  166 term_stmt: STAR
  167          | AT
  168          | SLASH
  169          | PERCENT
  170          | DOUBLESLASH

  171 factor: factor_stmt factor
  172       | power

  173 factor_stmt: PLUS
  174            | MINUS
  175            | TILDE

  176 power: atom_expr opc_DOUBLESTAR_factor

  177 opc_DOUBLESTAR_factor: %empty

  178 $@13: %empty

  179 opc_DOUBLESTAR_factor: DOUBLESTAR $@13 factor

  180 atom_expr: atom fk_trailer

  181 $@14: %empty

  182 atom_expr: AWAIT $@14 atom fk_trailer

  183 fk_trailer: %empty
  184           | trailer fk_trailer

  185 atom: LPAR opc_atom_stmt RPAR
  186     | LSQB opc_testlist_comp RSQB
  187     | NAME
  188     | NUMBER

  189 $@15: %empty

  190 atom: STRING $@15 fk_STRING
  191     | ELLIPSIS
  192     | NONE
  193     | TRUE
  194     | FALSE

  195 opc_atom_stmt: %empty
  196              | yield_expr
  197              | testlist_comp

  198 opc_testlist_comp: %empty
  199                  | testlist_comp

  200 fk_STRING: %empty

  201 $@16: %empty

  202 fk_STRING: STRING $@16 fk_STRING

  203 testlist_comp: trailer_stmt trailer_stmt_1

  204 trailer: LPAR opc_arglist RPAR
  205        | LSQB subscriptlist RSQB
  206        | DOT NAME

  207 opc_arglist: %empty
  208            | arglist

  209 fk_COMMA_NT_SE: %empty
  210               | COMMA trailer_stmt fk_COMMA_NT_SE

  211 trailer_stmt: namedexpr_test
  212             | star_expr

  213 trailer_stmt_1: comp_for
  214               | fk_COMMA_NT_SE opc_COMMA

  215 subscriptlist: subscript fk_COMMA_S opc_COMMA

  216 fk_COMMA_S: %empty
  217           | COMMA subscript fk_COMMA_S

  218 subscript: test
  219          | opc_test COLON opc_test opc_sliceop

  220 opc_test: %empty
  221         | test

  222 opc_sliceop: %empty
  223            | sliceop

  224 sliceop: COLON opc_test

  225 exprlist: exprlist_stmt fk_COMMA_E_SE opc_COMMA

  226 fk_COMMA_E_SE: %empty
  227              | COMMA exprlist_stmt fk_COMMA_E_SE

  228 exprlist_stmt: expr
  229              | star_expr

  230 testlist: test fk_COMMA_test opc_COMMA

  231 fk_COMMA_test: %empty
  232              | COMMA test fk_COMMA_test

  233 $@17: %empty

  234 classdef: CLASS NAME $@17 opc_LPAR_arglist_RPAR COLON suite

  235 opc_LPAR_arglist_RPAR: %empty
  236                      | LPAR RPAR
  237                      | LPAR arglist RPAR

  238 arglist: argument fk_COMMA_A opc_COMMA

  239 fk_COMMA_A: %empty
  240           | COMMA argument fk_COMMA_A

  241 argument: test opc_comp_for
  242         | test COLONEQUAL test
  243         | test EQUAL test
  244         | DOUBLESTAR test
  245         | STAR test

  246 opc_comp_for: %empty
  247             | comp_for

  248 comp_iter: comp_for
  249          | comp_if

  250 sync_comp_for: FOR exprlist IN or_test opc_comp_iter

  251 opc_comp_iter: %empty
  252              | comp_iter

  253 comp_for: opc_ASYNC sync_comp_for

  254 opc_ASYNC: %empty
  255          | ASYNC

  256 $@18: %empty

  257 comp_if: IF $@18 test_nocond opc_comp_iter

  258 yield_expr: YIELD opc_yield_arg

  259 opc_yield_arg: %empty
  260              | yield_arg

  261 yield_arg: FROM test
  262          | testlist_star_expr

  263 func_body_suite: simple_stmt
  264                | NEWLINE INDENT stmt fk_stmt DEDENT

  265 fk_stmt: %empty
  266        | stmt fk_stmt


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    IMPORT (258)
    FROM (259) 261
    AS (260) 104
    CLASS (261) 234
    DEF (262) 24
    LAMBDA (263) 117 118
    NOT (264) 125 138 140
    AND (265) 124
    OR (266) 121
    IF (267) 90 114 257
    ELSE_IF (268) 93
    ELSE (269) 98 114
    IS (270) 139 140
    TRUE (271) 193
    FALSE (272) 194
    ASSERT (273)
    FOR (274) 95 250
    IN (275) 95 137 138 250
    WHILE (276) 94
    PASS (277) 75
    BREAK (278) 76
    CONTINUE (279) 77
    TRY (280)
    EXCEPT (281)
    FINALLY (282)
    WITH (283) 99
    RETURN (284) 78
    RAISE (285)
    YIELD (286) 258
    GLOBAL (287) 83
    NONLOCAL (288) 85
    NONE (289) 192
    DEL (290) 70
    EXEC (291)
    ASYNC (292) 255
    AWAIT (293) 182
    NAME (294) 24 31 32 83 85 88 187 206 234
    NUMBER (295) 188
    STRING (296) 190 202
    INDENT (297) 106 264
    DEDENT (298) 106 264
    NEWLINE (299) 4 8 106 264
    LPAR (300) 28 185 204 236 237
    RPAR (301) 28 185 204 236 237
    LSQB (302) 186 205
    RSQB (303) 186 205
    COLON (304) 24 44 90 93 94 95 98 99 117 118 219 224 234
    COMMA (305) 31 52 69 88 101 210 217 227 232 240
    SEMI (306) 10 67
    PLUS (307) 161 173
    MINUS (308) 162 174
    STAR (309) 141 166 245
    SLASH (310) 168
    VBAR (311) 144
    AMPER (312) 152
    LESS (313) 130
    GREATER (314) 131
    LESSGREATER (315) 135
    EQUAL (316) 41 46 47 243
    DOT (317) 206
    PERCENT (318) 169
    LBRACE (319)
    RBRACE (320)
    EQEQUAL (321) 132
    NOTEQUAL (322) 136
    LESSEQUAL (323) 134
    GREATEREQUAL (324) 133
    TILDE (325) 175
    CIRCUMFLEX (326) 148
    LEFTSHIFT (327) 156
    RIGHTSHIFT (328) 157
    DOUBLESTAR (329) 179 244
    PLUSEQUAL (330) 53
    MINEQUAL (331) 54
    STAREQUAL (332) 55
    SLASHEQUAL (333) 57
    PERCENTEQUAL (334) 58
    AMPEREQUAL (335) 59
    VBAREQUAL (336) 60
    CIRCUMFLEXEQUAL (337) 61
    LEFTSHIFTEQUAL (338) 62
    RIGHTSHIFTEQUAL (339) 63
    DOUBLESTAREQUAL (340) 64
    DOUBLESLASH (341) 170
    DOUBLESLASHEQUAL (342) 65
    AT (343) 167
    ATEQUAL (344) 56
    RARROW (345) 27
    ELLIPSIS (346) 191
    COLONEQUAL (347) 110 242
    ENDMARKER (348) 1
    LOW (349)


Não terminais com as regras onde eles aparecem

    $accept (95)
        à esquerda: 0
    file_input (96)
        à esquerda: 1
        à direita: 0
    fk_NEWLINE_stmt (97)
        à esquerda: 2 3
        à direita: 1 3 10
    NL_stmt (98)
        à esquerda: 4 5
        à direita: 3
    stmt (99)
        à esquerda: 6 7
        à direita: 5 106 264 266
    simple_stmt (100)
        à esquerda: 8
        à direita: 6 105 263
    fk_SEMI_small_stmt (101)
        à esquerda: 9 10
        à direita: 8
    small_stmt (102)
        à esquerda: 11 12 13 14 15 16
        à direita: 8 10
    compound_stmt (103)
        à esquerda: 17 18 19 20 21 22
        à direita: 7
    funcdef (104)
        à esquerda: 24
        à direita: 21
    $@1 (105)
        à esquerda: 23
        à direita: 24
    opc_RARROW_test (106)
        à esquerda: 25 27
        à direita: 24
    $@2 (107)
        à esquerda: 26
        à direita: 27
    parameters (108)
        à esquerda: 28
        à direita: 24
    opc_argslist (109)
        à esquerda: 29 31 32
        à direita: 28 31 117 118
    $@3 (110)
        à esquerda: 30
        à direita: 31
    expr_stmt (111)
        à esquerda: 33
        à direita: 11
    expr_stmt_1 (112)
        à esquerda: 34 35 36
        à direita: 33
    expr_stmt_2 (113)
        à esquerda: 37 38
        à direita: 35
    fk_EQ_YE_TSE (114)
        à esquerda: 39 40
        à direita: 36 40
    expr_stmt_3 (115)
        à esquerda: 41
        à direita: 40
    expr_stmt_4 (116)
        à esquerda: 42 43
        à direita: 41
    annassign (117)
        à esquerda: 44
        à direita: 34
    opc_EQUAL_MALUCO (118)
        à esquerda: 45 46 47
        à direita: 44
    testlist_star_expr (119)
        à esquerda: 48
        à direita: 33 43 47 81 262
    TSE_stmt (120)
        à esquerda: 49 50
        à direita: 48 52
    fk_COMMA_T_SE (121)
        à esquerda: 51 52
        à direita: 48 52
    augassign (122)
        à esquerda: 53 54 55 56 57 58 59 60 61 62 63 64 65
        à direita: 35
    opc_SEMI (123)
        à esquerda: 66 67
        à direita: 8
    opc_COMMA (124)
        à esquerda: 68 69
        à direita: 48 214 215 225 230 238
    del_stmt (125)
        à esquerda: 70
        à direita: 12
    flow_stmt (126)
        à esquerda: 71 72 73 74
        à direita: 14
    pass_stmt (127)
        à esquerda: 75
        à direita: 13
    break_stmt (128)
        à esquerda: 76
        à direita: 71
    continue_stmt (129)
        à esquerda: 77
        à direita: 72
    return_stmt (130)
        à esquerda: 78
        à direita: 73
    yield_stmt (131)
        à esquerda: 79
        à direita: 74
    opc_testlist_star_expr (132)
        à esquerda: 80 81
        à direita: 78
    global_stmt (133)
        à esquerda: 83
        à direita: 15
    $@4 (134)
        à esquerda: 82
        à direita: 83
    nonlocal_stmt (135)
        à esquerda: 85
        à direita: 16
    $@5 (136)
        à esquerda: 84
        à direita: 85
    fk_COMMA_NAME (137)
        à esquerda: 86 88
        à direita: 83 85 88
    $@6 (138)
        à esquerda: 87
        à direita: 88
    if_stmt (139)
        à esquerda: 90
        à direita: 17
    $@7 (140)
        à esquerda: 89
        à direita: 90
    fk_ELIF_NT_COLON_SUITE (141)
        à esquerda: 91 93
        à direita: 90 93
    $@8 (142)
        à esquerda: 92
        à direita: 93
    while_stmt (143)
        à esquerda: 94
        à direita: 18
    for_stmt (144)
        à esquerda: 95
        à direita: 19
    opc_ELSE_COLON_suite (145)
        à esquerda: 96 98
        à direita: 90 94 95
    $@9 (146)
        à esquerda: 97
        à direita: 98
    with_stmt (147)
        à esquerda: 99
        à direita: 20
    fk_COMMA_WI (148)
        à esquerda: 100 101
        à direita: 99 101
    with_item (149)
        à esquerda: 102
        à direita: 99 101
    opc_AS_expr (150)
        à esquerda: 103 104
        à direita: 102
    suite (151)
        à esquerda: 105 106
        à direita: 90 93 94 95 98 99 234
    namedexpr_test (152)
        à esquerda: 107
        à direita: 90 93 94 211
    opc_COLONEQUAL_test (153)
        à esquerda: 108 110
        à direita: 107
    $@10 (154)
        à esquerda: 109
        à direita: 110
    test (155)
        à esquerda: 111 112
        à direita: 27 44 49 102 107 110 114 117 218 221 230 232 241 242 243 244 245 261
    opc_IF_or_test_ELSE_test (156)
        à esquerda: 113 114
        à direita: 111
    test_nocond (157)
        à esquerda: 115 116
        à direita: 118 257
    lambdef (158)
        à esquerda: 117
        à direita: 112
    lambdef_nocond (159)
        à esquerda: 118
        à direita: 116
    or_test (160)
        à esquerda: 119
        à direita: 111 114 115 250
    fk_OR_AT (161)
        à esquerda: 120 121
        à direita: 119 121
    and_test (162)
        à esquerda: 122
        à direita: 119 121
    fk_AND_NT (163)
        à esquerda: 123 124
        à direita: 122 124
    not_test (164)
        à esquerda: 125 126
        à direita: 122 124 125
    comparison (165)
        à esquerda: 127
        à direita: 126
    fk_CO_EXPR (166)
        à esquerda: 128 129
        à direita: 127 129
    comp_op (167)
        à esquerda: 130 131 132 133 134 135 136 137 138 139 140
        à direita: 129
    star_expr (168)
        à esquerda: 141
        à direita: 50 212 229
    expr (169)
        à esquerda: 142
        à direita: 104 127 129 141 228
    fk_VBAR_XE (170)
        à esquerda: 143 144
        à direita: 142 144
    xor_expr (171)
        à esquerda: 145
        à direita: 142 144
    fk_CIRCUMFLEX_EXPR (172)
        à esquerda: 146 148
        à direita: 145 148
    $@11 (173)
        à esquerda: 147
        à direita: 148
    and_expr (174)
        à esquerda: 149
        à direita: 145 148
    fk_AMPER_SE (175)
        à esquerda: 150 152
        à direita: 149 152
    $@12 (176)
        à esquerda: 151
        à direita: 152
    shift_expr (177)
        à esquerda: 153
        à direita: 149 152
    fk_LS_RS_AE (178)
        à esquerda: 154 155
        à direita: 153 155
    SE_stmt (179)
        à esquerda: 156 157
        à direita: 155
    arith_expr (180)
        à esquerda: 158
        à direita: 153 155
    fk_T_PLUS_MINUS (181)
        à esquerda: 159 160
        à direita: 158 160
    AE_stmt (182)
        à esquerda: 161 162
        à direita: 160
    term (183)
        à esquerda: 163
        à direita: 158 160
    fk_MATH (184)
        à esquerda: 164 165
        à direita: 163 165
    term_stmt (185)
        à esquerda: 166 167 168 169 170
        à direita: 165
    factor (186)
        à esquerda: 171 172
        à direita: 163 165 171 179
    factor_stmt (187)
        à esquerda: 173 174 175
        à direita: 171
    power (188)
        à esquerda: 176
        à direita: 172
    opc_DOUBLESTAR_factor (189)
        à esquerda: 177 179
        à direita: 176
    $@13 (190)
        à esquerda: 178
        à direita: 179
    atom_expr (191)
        à esquerda: 180 182
        à direita: 176
    $@14 (192)
        à esquerda: 181
        à direita: 182
    fk_trailer (193)
        à esquerda: 183 184
        à direita: 180 182 184
    atom (194)
        à esquerda: 185 186 187 188 190 191 192 193 194
        à direita: 180 182
    $@15 (195)
        à esquerda: 189
        à direita: 190
    opc_atom_stmt (196)
        à esquerda: 195 196 197
        à direita: 185
    opc_testlist_comp (197)
        à esquerda: 198 199
        à direita: 186
    fk_STRING (198)
        à esquerda: 200 202
        à direita: 190 202
    $@16 (199)
        à esquerda: 201
        à direita: 202
    testlist_comp (200)
        à esquerda: 203
        à direita: 197 199
    trailer (201)
        à esquerda: 204 205 206
        à direita: 184
    opc_arglist (202)
        à esquerda: 207 208
        à direita: 204
    fk_COMMA_NT_SE (203)
        à esquerda: 209 210
        à direita: 210 214
    trailer_stmt (204)
        à esquerda: 211 212
        à direita: 203 210
    trailer_stmt_1 (205)
        à esquerda: 213 214
        à direita: 203
    subscriptlist (206)
        à esquerda: 215
        à direita: 205
    fk_COMMA_S (207)
        à esquerda: 216 217
        à direita: 215 217
    subscript (208)
        à esquerda: 218 219
        à direita: 215 217
    opc_test (209)
        à esquerda: 220 221
        à direita: 219 224
    opc_sliceop (210)
        à esquerda: 222 223
        à direita: 219
    sliceop (211)
        à esquerda: 224
        à direita: 223
    exprlist (212)
        à esquerda: 225
        à direita: 70 95 250
    fk_COMMA_E_SE (213)
        à esquerda: 226 227
        à direita: 225 227
    exprlist_stmt (214)
        à esquerda: 228 229
        à direita: 225 227
    testlist (215)
        à esquerda: 230
        à direita: 38 95
    fk_COMMA_test (216)
        à esquerda: 231 232
        à direita: 230 232
    classdef (217)
        à esquerda: 234
        à direita: 22
    $@17 (218)
        à esquerda: 233
        à direita: 234
    opc_LPAR_arglist_RPAR (219)
        à esquerda: 235 236 237
        à direita: 234
    arglist (220)
        à esquerda: 238
        à direita: 208 237
    fk_COMMA_A (221)
        à esquerda: 239 240
        à direita: 238 240
    argument (222)
        à esquerda: 241 242 243 244 245
        à direita: 238 240
    opc_comp_for (223)
        à esquerda: 246 247
        à direita: 241
    comp_iter (224)
        à esquerda: 248 249
        à direita: 252
    sync_comp_for (225)
        à esquerda: 250
        à direita: 253
    opc_comp_iter (226)
        à esquerda: 251 252
        à direita: 250 257
    comp_for (227)
        à esquerda: 253
        à direita: 213 247 248
    opc_ASYNC (228)
        à esquerda: 254 255
        à direita: 253
    comp_if (229)
        à esquerda: 257
        à direita: 249
    $@18 (230)
        à esquerda: 256
        à direita: 257
    yield_expr (231)
        à esquerda: 258
        à direita: 37 42 46 79 196
    opc_yield_arg (232)
        à esquerda: 259 260
        à direita: 258
    yield_arg (233)
        à esquerda: 261 262
        à direita: 260
    func_body_suite (234)
        à esquerda: 263 264
        à direita: 24
    fk_stmt (235)
        à esquerda: 265 266
        à direita: 106 264 266


Estado 0

    0 $accept: . file_input $end

    CLASS     deslocar, e ir ao estado 1
    DEF       deslocar, e ir ao estado 2
    LAMBDA    deslocar, e ir ao estado 3
    NOT       deslocar, e ir ao estado 4
    IF        deslocar, e ir ao estado 5
    TRUE      deslocar, e ir ao estado 6
    FALSE     deslocar, e ir ao estado 7
    FOR       deslocar, e ir ao estado 8
    WHILE     deslocar, e ir ao estado 9
    PASS      deslocar, e ir ao estado 10
    BREAK     deslocar, e ir ao estado 11
    CONTINUE  deslocar, e ir ao estado 12
    WITH      deslocar, e ir ao estado 13
    RETURN    deslocar, e ir ao estado 14
    YIELD     deslocar, e ir ao estado 15
    GLOBAL    deslocar, e ir ao estado 16
    NONLOCAL  deslocar, e ir ao estado 17
    NONE      deslocar, e ir ao estado 18
    DEL       deslocar, e ir ao estado 19
    AWAIT     deslocar, e ir ao estado 20
    NAME      deslocar, e ir ao estado 21
    NUMBER    deslocar, e ir ao estado 22
    STRING    deslocar, e ir ao estado 23
    NEWLINE   deslocar, e ir ao estado 24
    LPAR      deslocar, e ir ao estado 25
    LSQB      deslocar, e ir ao estado 26
    PLUS      deslocar, e ir ao estado 27
    MINUS     deslocar, e ir ao estado 28
    STAR      deslocar, e ir ao estado 29
    TILDE     deslocar, e ir ao estado 30
    ELLIPSIS  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 2 (fk_NEWLINE_stmt)

    file_input          ir ao estado 32
    fk_NEWLINE_stmt     ir ao estado 33
    NL_stmt             ir ao estado 34
    stmt                ir ao estado 35
    simple_stmt         ir ao estado 36
    small_stmt          ir ao estado 37
    compound_stmt       ir ao estado 38
    funcdef             ir ao estado 39
    expr_stmt           ir ao estado 40
    testlist_star_expr  ir ao estado 41
    TSE_stmt            ir ao estado 42
    del_stmt            ir ao estado 43
    flow_stmt           ir ao estado 44
    pass_stmt           ir ao estado 45
    break_stmt          ir ao estado 46
    continue_stmt       ir ao estado 47
    return_stmt         ir ao estado 48
    yield_stmt          ir ao estado 49
    global_stmt         ir ao estado 50
    nonlocal_stmt       ir ao estado 51
    if_stmt             ir ao estado 52
    while_stmt          ir ao estado 53
    for_stmt            ir ao estado 54
    with_stmt           ir ao estado 55
    test                ir ao estado 56
    lambdef             ir ao estado 57
    or_test             ir ao estado 58
    and_test            ir ao estado 59
    not_test            ir ao estado 60
    comparison          ir ao estado 61
    star_expr           ir ao estado 62
    expr                ir ao estado 63
    xor_expr            ir ao estado 64
    and_expr            ir ao estado 65
    shift_expr          ir ao estado 66
    arith_expr          ir ao estado 67
    term                ir ao estado 68
    factor              ir ao estado 69
    factor_stmt         ir ao estado 70
    power               ir ao estado 71
    atom_expr           ir ao estado 72
    atom                ir ao estado 73
    classdef            ir ao estado 74
    yield_expr          ir ao estado 75


Estado 1

  234 classdef: CLASS . NAME $@17 opc_LPAR_arglist_RPAR COLON suite

    NAME  deslocar, e ir ao estado 76


Estado 2

   24 funcdef: DEF . NAME $@1 parameters opc_RARROW_test COLON func_body_suite

    NAME  deslocar, e ir ao estado 77


Estado 3

  117 lambdef: LAMBDA . opc_argslist COLON test

    NAME  deslocar, e ir ao estado 78

    $padrão  reduzir usando a regra 29 (opc_argslist)

    opc_argslist  ir ao estado 79


Estado 4

  125 not_test: NOT . not_test

    NOT       deslocar, e ir ao estado 4
    TRUE      deslocar, e ir ao estado 6
    FALSE     deslocar, e ir ao estado 7
    NONE      deslocar, e ir ao estado 18
    AWAIT     deslocar, e ir ao estado 20
    NAME      deslocar, e ir ao estado 21
    NUMBER    deslocar, e ir ao estado 22
    STRING    deslocar, e ir ao estado 23
    LPAR      deslocar, e ir ao estado 25
    LSQB      deslocar, e ir ao estado 26
    PLUS      deslocar, e ir ao estado 27
    MINUS     deslocar, e ir ao estado 28
    TILDE     deslocar, e ir ao estado 30
    ELLIPSIS  deslocar, e ir ao estado 31

    not_test     ir ao estado 80
    comparison   ir ao estado 61
    expr         ir ao estado 63
    xor_expr     ir ao estado 64
    and_expr     ir ao estado 65
    shift_expr   ir ao estado 66
    arith_expr   ir ao estado 67
    term         ir ao estado 68
    factor       ir ao estado 69
    factor_stmt  ir ao estado 70
    power        ir ao estado 71
    atom_expr    ir ao estado 72
    atom         ir ao estado 73


Estado 5

   90 if_stmt: IF . $@7 namedexpr_test COLON suite fk_ELIF_NT_COLON_SUITE opc_ELSE_COLON_suite

    $padrão  reduzir usando a regra 89 ($@7)

    $@7  ir ao estado 81


Estado 6

  193 atom: TRUE .

    $padrão  reduzir usando a regra 193 (atom)


Estado 7

  194 atom: FALSE .

    $padrão  reduzir usando a regra 194 (atom)


Estado 8

   95 for_stmt: FOR . exprlist IN testlist COLON suite opc_ELSE_COLON_suite

    TRUE      deslocar, e ir ao estado 6
    FALSE     deslocar, e ir ao estado 7
    NONE      deslocar, e ir ao estado 18
    AWAIT     deslocar, e ir ao estado 20
    NAME      deslocar, e ir ao estado 21
    NUMBER    deslocar, e ir ao estado 22
    STRING    deslocar, e ir ao estado 23
    LPAR      deslocar, e ir ao estado 25
    LSQB      deslocar, e ir ao estado 26
    PLUS      deslocar, e ir ao estado 27
    MINUS     deslocar, e ir ao estado 28
    STAR      deslocar, e ir ao estado 29
    TILDE     deslocar, e ir ao estado 30
    ELLIPSIS  deslocar, e ir ao estado 31

    star_expr      ir ao estado 82
    expr           ir ao estado 83
    xor_expr       ir ao estado 64
    and_expr       ir ao estado 65
    shift_expr     ir ao estado 66
    arith_expr     ir ao estado 67
    term           ir ao estado 68
    factor         ir ao estado 69
    factor_stmt    ir ao estado 70
    power          ir ao estado 71
    atom_expr      ir ao estado 72
    atom           ir ao estado 73
    exprlist       ir ao estado 84
    exprlist_stmt  ir ao estado 85


Estado 9

   94 while_stmt: WHILE . namedexpr_test COLON suite opc_ELSE_COLON_suite

    LAMBDA    deslocar, e ir ao estado 3
    NOT       deslocar, e ir ao estado 4
    TRUE      deslocar, e ir ao estado 6
    FALSE     deslocar, e ir ao estado 7
    NONE      deslocar, e ir ao estado 18
    AWAIT     deslocar, e ir ao estado 20
    NAME      deslocar, e ir ao estado 21
    NUMBER    deslocar, e ir ao estado 22
    STRING    deslocar, e ir ao estado 23
    LPAR      deslocar, e ir ao estado 25
    LSQB      deslocar, e ir ao estado 26
    PLUS      deslocar, e ir ao estado 27
    MINUS     deslocar, e ir ao estado 28
    TILDE     deslocar, e ir ao estado 30
    ELLIPSIS  deslocar, e ir ao estado 31

    namedexpr_test  ir ao estado 86
    test            ir ao estado 87
    lambdef         ir ao estado 57
    or_test         ir ao estado 58
    and_test        ir ao estado 59
    not_test        ir ao estado 60
    comparison      ir ao estado 61
    expr            ir ao estado 63
    xor_expr        ir ao estado 64
    and_expr        ir ao estado 65
    shift_expr      ir ao estado 66
    arith_expr      ir ao estado 67
    term            ir ao estado 68
    factor          ir ao estado 69
    factor_stmt     ir ao estado 70
    power           ir ao estado 71
    atom_expr       ir ao estado 72
    atom            ir ao estado 73


Estado 10

   75 pass_stmt: PASS .

    $padrão  reduzir usando a regra 75 (pass_stmt)


Estado 11

   76 break_stmt: BREAK .

    $padrão  reduzir usando a regra 76 (break_stmt)


Estado 12

   77 continue_stmt: CONTINUE .

    $padrão  reduzir usando a regra 77 (continue_stmt)


Estado 13

   99 with_stmt: WITH . with_item fk_COMMA_WI COLON suite

    LAMBDA    deslocar, e ir ao estado 3
    NOT       deslocar, e ir ao estado 4
    TRUE      deslocar, e ir ao estado 6
    FALSE     deslocar, e ir ao estado 7
    NONE      deslocar, e ir ao estado 18
    AWAIT     deslocar, e ir ao estado 20
    NAME      deslocar, e ir ao estado 21
    NUMBER    deslocar, e ir ao estado 22
    STRING    deslocar, e ir ao estado 23
    LPAR      deslocar, e ir ao estado 25
    LSQB      deslocar, e ir ao estado 26
    PLUS      deslocar, e ir ao estado 27
    MINUS     deslocar, e ir ao estado 28
    TILDE     deslocar, e ir ao estado 30
    ELLIPSIS  deslocar, e ir ao estado 31
